test/parsing/errors/exceptOnlyInvalidExpr.compopts
--detailed-errors # exceptOnlyInvalidExpr-detailed.good
--no-detailed-errors # exceptOnlyInvalidExpr-brief.good
